Fixed background on smaller width screens

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -82,7 +82,7 @@
 }
 
 #particles-js {
-  position: absolute;
+  position: fixed;
   width: 100%;
   height: 100%;
   background-color: #000;
